--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 </head>
 <body class="bg-gray-50 text-gray-900 selection:bg-violet-100 selection:text-violet-700">
     <div class="max-w-5xl mx-auto px-4 sm:px-6">
-        <header class="mb-12">
+        <header>
             {% include nav.html %}
         </header>
 
