--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,13 @@
         }
     </style>
 </head>
-<body class="bg-gray-50 text-gray-900 selection:bg-violet-100 selection:text-violet-700">
+<body class="bg-gray-50 text-gray-900">
     <div class="max-w-5xl mx-auto px-4 sm:px-6">
         <header>
             {% include nav.html %}
         </header>
 
-        <main class="animate-fadeIn">
+        <main class="max-w-5xl mx-auto px-4 sm:px-6 mt-10">
             {{ content }}
         </main>
 
